TPLWYLIA-36 fixing align arrow navigation of shackslides

--- a/code/less/template.less
+++ b/code/less/template.less
@@ -2937,6 +2937,14 @@ div{
 	}
 }
 
+.slidermanButtonsCont .sliderPrev, .slidermanButtonsCont .sliderNext{
+	top: ~"-webkit-calc(50% - 30px)";
+	top: ~"-moz-calc(50% - 30px)";
+	top: ~"-ms-calc(50% - 30px)";
+	top: ~"-o-calc(50% - 30px)";
+	top: ~"calc(50% - 30px)";
+}
+
 #main{
 	.slidermanButtonsCont{
 		.sliderPrev {
